added a transformer structure image

--- a/Transformer_from_Scratch_for_Text_Summarization_(PyTorch_Implementation).ipynb
+++ b/Transformer_from_Scratch_for_Text_Summarization_(PyTorch_Implementation).ipynb
@@ -847,7 +847,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": null,
    "id": "dfcab898-2bdc-4234-a4f3-7d1ee9554726",
    "metadata": {},
    "outputs": [],
@@ -1096,7 +1096,7 @@
    "id": "cae5cf7f-5836-4274-8ac9-ad1d1b21a5cf",
    "metadata": {},
    "source": [
-    "## Look ahead mask / Attention mask"
+    "## Look ahead mask"
    ]
   },
   {
